Fix kernels of notebooks, add notebook for use from colab (#202)

--- a/notebooks/featurestore/hsfs/snowflake/pyspark.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/pyspark.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "terminal-delay",
+   "id": "c78f87a8",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "title: \"Snowflake: PySpark External Tables (On-Demand FGs)\"\n",
+    "date: 2021-02-24\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cae35164",
    "metadata": {},
    "source": [
     "## Snowflake (On-Demand) Feature Group \n",
@@ -14,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fifteen-adjustment",
+   "id": "bc509dff",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "artistic-trouble",
+   "id": "a414c7a2",
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7fe26256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "chicken-beatles",
+   "id": "be059163",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "gross-socket",
+   "id": "0a09e733",
    "metadata": {},
    "source": [
     "### External (On-Demand) Feature Group\n",
@@ -129,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "hybrid-expense",
+   "id": "88fff740",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "growing-right",
+   "id": "e73bcf1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "refined-server",
+   "id": "bbf76e3c",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "every-money",
+   "id": "10661c79",
    "metadata": {},
    "outputs": [],
    "source": []
