--- a/notebooks/hive/PyHive.ipynb
+++ b/notebooks/hive/PyHive.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -27,6 +27,10 @@
     "\n",
     "The example uses a dataset of real estate sales in the Sacramento area, which you can download from [here](http://snurran.sics.se/hops/hive/Sacramentorealestatetransactions.csv).\n",
     "Create a dataset with a name of your choosing, for example `RawData` and upload the CSV file. Make sure the dataset is empty, you will need to delete the auto-generated README.md\n",
+    "\n",
+    "## Warning\n",
+    "\n",
+    "This notebook will download three files, including a private key, that provide write access to the Hive database. Do not check these files into Git (or any other source code control system). If you have `auto-push on shutdown` enabled, it will add these files to git.\n",
     "\n",
     "First we need to setup the IPython magic and the connection information by running the following cell:"
    ]
@@ -763,7 +767,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -777,9 +781,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
