--- a/notebooks/spark/Elasticsearch-scala.ipynb
+++ b/notebooks/spark/Elasticsearch-scala.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -140,7 +140,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Spark",
-   "language": "",
+   "language": "scala",
    "name": "sparkkernel"
   },
   "language_info": {
