--- a/notebooks/featurestore/azure/azure-ml-studio.ipynb
+++ b/notebooks/featurestore/azure/azure-ml-studio.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install hsfs[hive]==2.1.4"
+    "!pip install hsfs[hive]"
    ]
   },
   {
@@ -92,7 +92,7 @@
      "logged": 1614082789104
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -105,6 +105,7 @@
    "source": [
     "import hsfs\n",
     "\n",
+    "# TODO: replace the values below: [UUID], [project-name], [api-key]\n",
     "connection = hsfs.connection(host=\"[UUID].cloud.hopsworks.ai\",\n",
     "    project=\"[project-name]\",\n",
     "    engine=\"hive\",\n",
@@ -142,7 +143,7 @@
      "logged": 1614082795986
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -167,7 +168,7 @@
      "logged": 1614082797239
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -203,7 +204,7 @@
      "logged": 1614084085201
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -228,7 +229,7 @@
      "logged": 1614084089261
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -264,7 +265,7 @@
      "logged": 1614082857172
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -307,7 +308,7 @@
      "logged": 1614084100739
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -330,7 +331,7 @@
      "logged": 1614084103619
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -378,7 +379,7 @@
      "logged": 1614082963077
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -427,7 +428,7 @@
      "logged": 1613989417879
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -465,7 +466,7 @@
      "logged": 1613990034148
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -505,7 +506,7 @@
      "logged": 1613990097127
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -538,7 +539,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -582,7 +583,7 @@
      "logged": 1613990589400
     },
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -618,7 +619,7 @@
    "metadata": {
     "collapsed": true,
     "jupyter": {
-     "outputs_hidden": false,
+     "outputs_hidden": true,
      "source_hidden": false
     },
     "nteract": {
@@ -636,7 +637,7 @@
    "name": "python3-azureml"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -650,12 +651,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.9"
   },
   "nteract": {
    "version": "nteract-front-end@1.0.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
