--- a/notebooks/featurestore/delta/DeltaOnHops.ipynb
+++ b/notebooks/featurestore/delta/DeltaOnHops.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -571,7 +571,7 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Spark",
-   "language": "",
+   "language": "scala",
    "name": "sparkkernel"
   },
   "language_info": {
@@ -582,5 +582,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
