--- a/notebooks/featurestore/feature-bias/feature-bias-whatif.ipynb
+++ b/notebooks/featurestore/feature-bias/feature-bias-whatif.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Visualization - What-if-Tool (Jupyter Classic)\"\n",
+    "title: \"Feature Analysis with What-If-Tool\"\n",
     "date: 2021-02-24\n",
     "type: technical_note\n",
     "draft: false\n",
@@ -15,13 +15,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
     "id": "UiNxsd4_q9wq"
    },
    "source": [
     "### What-If Tool in a jupyter notebook\n",
-    "\n",
-    "WARNING: This notebook only runs on \"classic\" Jupyter, not on Jupyterlab.\n",
     "\n",
     "This notebook shows use of the [What-If Tool](https://pair-code.github.io/what-if-tool) inside of a jupyter notebook.\n",
     "\n",
@@ -34,8 +31,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "jlwjF-Nnmoww"
    },
    "outputs": [],
@@ -125,13 +120,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 2989
-    },
-    "colab_type": "code",
-    "id": "nu398ARdeuxe",
-    "outputId": "4ad2b2f4-259b-44f1-ec05-112a8b609260"
+    "id": "nu398ARdeuxe"
    },
    "outputs": [
     {
@@ -428,10 +417,9 @@
     "#@title Read training dataset from CSV {display-mode: \"form\"}\n",
     "\n",
     "import pandas as pd\n",
-    "import hops.hdfs as hdfs\n",
     "\n",
     "# Set the path to the CSV containing the dataset to train on.\n",
-    "# csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
+    "csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data'\n",
     "\n",
     "# Set the column names for the columns in the CSV. If the CSV's first line is a header line containing\n",
     "# the column names, then set this to None.\n",
@@ -441,11 +429,7 @@
     "  \"Hours-per-week\", \"Country\", \"Over-50K\"]\n",
     "\n",
     "# Read the dataset from the provided CSV and print out information about it.\n",
-    "h = hdfs.get_fs()\n",
-    "with h.open_file(hdfs.project_path() + \"/TourData/census/adult.data\", \"rt\") as trainFile:\n",
-    "    df = pd.read_csv(trainFile, names=csv_columns, skipinitialspace=True)\n",
-    "\n",
-    "# df = pd.read_csv(csv_path, names=csv_columns, skipinitialspace=True)\n",
+    "df = pd.read_csv(csv_path, names=csv_columns, skipinitialspace=True)\n",
     "\n",
     "df"
    ]
@@ -454,8 +438,6 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "67DYIFxoevt2"
    },
    "outputs": [],
@@ -486,8 +468,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "BV4f_4_Lex22"
    },
    "outputs": [],
@@ -501,8 +481,6 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "YyLr-_0de1Ii"
    },
    "outputs": [
@@ -511,22 +489,39 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Using default config.\n",
-      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmphg54156d\n",
-      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmphg54156d', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
+      "WARNING:tensorflow:Using temporary folder as model directory: /tmp/tmpwhj4hb50\n",
+      "INFO:tensorflow:Using config: {'_model_dir': '/tmp/tmpwhj4hb50', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': allow_soft_placement: true\n",
       "graph_options {\n",
       "  rewrite_options {\n",
       "    meta_optimizer_iterations: ONE\n",
       "  }\n",
       "}\n",
-      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_service': None, '_cluster_spec': ClusterSpec({}), '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
+      ", '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_device_fn': None, '_protocol': None, '_eval_distribute': None, '_experimental_distribute': None, '_experimental_max_worker_delay_secs': None, '_session_creation_timeout_secs': 7200, '_checkpoint_save_graph_def': True, '_service': None, '_cluster_spec': ClusterSpec({}), '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.7/site-packages/tensorflow/python/training/training_util.py:236: Variable.initialized_value (from tensorflow.python.ops.variables) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use Variable.read_value. Variables in 2.X are initialized automatically both in eager and graph (inside tf.defun) contexts.\n",
-      "INFO:tensorflow:Calling model_fn.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow_estimator/python/estimator/canned/linear.py:1481: Layer.add_variable (from tensorflow.python.keras.engine.base_layer_v1) is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From <ipython-input-1-8a342201fe2b>:45: calling DatasetV2.from_generator (from tensorflow.python.data.ops.dataset_ops) with output_types is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
-      "Please use `layer.add_weight` method instead.\n",
-      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.6/site-packages/tensorflow/python/keras/optimizer_v2/ftrl.py:112: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Use output_signature instead\n",
+      "WARNING:tensorflow:From <ipython-input-1-8a342201fe2b>:45: calling DatasetV2.from_generator (from tensorflow.python.data.ops.dataset_ops) with output_shapes is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use output_signature instead\n",
+      "INFO:tensorflow:Calling model_fn.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/srv/hops/anaconda/envs/theenv/lib/python3.7/site-packages/tensorflow/python/keras/engine/base_layer_v1.py:1727: UserWarning: `layer.add_variable` is deprecated and will be removed in a future version. Please use `layer.add_weight` method instead.\n",
+      "  warnings.warn('`layer.add_variable` is deprecated and '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /srv/hops/anaconda/envs/theenv/lib/python3.7/site-packages/tensorflow/python/keras/optimizer_v2/ftrl.py:134: calling Constant.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Call initializer instance with the dtype argument instead of passing it to the constructor\n",
       "INFO:tensorflow:Done calling model_fn.\n",
@@ -535,37 +530,117 @@
       "INFO:tensorflow:Running local_init_op.\n",
       "INFO:tensorflow:Done running local_init_op.\n",
       "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 0...\n",
-      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmphg54156d/model.ckpt.\n",
+      "INFO:tensorflow:Saving checkpoints for 0 into /tmp/tmpwhj4hb50/model.ckpt.\n",
       "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 0...\n",
       "INFO:tensorflow:loss = 0.6931472, step = 0\n",
-      "INFO:tensorflow:global_step/sec: 33.0106\n",
-      "INFO:tensorflow:loss = 1.2316809, step = 100 (3.032 sec)\n",
-      "INFO:tensorflow:global_step/sec: 35.9212\n",
-      "INFO:tensorflow:loss = 2.1111045, step = 200 (2.783 sec)\n",
-      "INFO:tensorflow:global_step/sec: 36.3198\n",
-      "INFO:tensorflow:loss = 1.3279744, step = 300 (2.754 sec)\n",
-      "INFO:tensorflow:global_step/sec: 35.3992\n",
-      "INFO:tensorflow:loss = 2.732805, step = 400 (2.825 sec)\n",
-      "INFO:tensorflow:global_step/sec: 34.4937\n",
-      "INFO:tensorflow:loss = 0.6547704, step = 500 (2.899 sec)\n",
-      "INFO:tensorflow:global_step/sec: 36.1927\n",
-      "INFO:tensorflow:loss = 0.5864808, step = 600 (2.762 sec)\n",
-      "INFO:tensorflow:global_step/sec: 35.5821\n",
-      "INFO:tensorflow:loss = 0.29896152, step = 700 (2.811 sec)\n",
-      "INFO:tensorflow:global_step/sec: 35.4071\n",
-      "INFO:tensorflow:loss = 2.0995965, step = 800 (2.827 sec)\n",
-      "INFO:tensorflow:global_step/sec: 34.6815\n",
-      "INFO:tensorflow:loss = 0.96475744, step = 900 (2.881 sec)\n",
-      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 1000...\n",
-      "INFO:tensorflow:Saving checkpoints for 1000 into /tmp/tmphg54156d/model.ckpt.\n",
-      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 1000...\n",
-      "INFO:tensorflow:Loss for final step: 0.6493055.\n"
+      "INFO:tensorflow:global_step/sec: 33.2431\n",
+      "INFO:tensorflow:loss = 4.382903, step = 100 (3.010 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4136\n",
+      "INFO:tensorflow:loss = 2.7288811, step = 200 (2.824 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.6318\n",
+      "INFO:tensorflow:loss = 2.1233702, step = 300 (2.807 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.8087\n",
+      "INFO:tensorflow:loss = 0.75261587, step = 400 (2.793 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.8525\n",
+      "INFO:tensorflow:loss = 0.6295183, step = 500 (2.789 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.0075\n",
+      "INFO:tensorflow:loss = 0.7305664, step = 600 (2.777 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.2321\n",
+      "INFO:tensorflow:loss = 0.31755647, step = 700 (2.921 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9532\n",
+      "INFO:tensorflow:loss = 0.35623616, step = 800 (2.782 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.495\n",
+      "INFO:tensorflow:loss = 0.37474883, step = 900 (2.900 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4564\n",
+      "INFO:tensorflow:loss = 0.75161946, step = 1000 (2.821 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9353\n",
+      "INFO:tensorflow:loss = 0.893802, step = 1100 (2.781 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.7082\n",
+      "INFO:tensorflow:loss = 1.2987123, step = 1200 (2.881 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.5196\n",
+      "INFO:tensorflow:loss = 0.6011514, step = 1300 (2.738 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.699\n",
+      "INFO:tensorflow:loss = 1.6727773, step = 1400 (2.882 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.751\n",
+      "INFO:tensorflow:loss = 0.34819418, step = 1500 (2.797 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.7292\n",
+      "INFO:tensorflow:loss = 2.3248138, step = 1600 (2.799 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.3055\n",
+      "INFO:tensorflow:loss = 4.9360785, step = 1700 (2.833 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.4498\n",
+      "INFO:tensorflow:loss = 0.45529312, step = 1800 (2.903 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.8628\n",
+      "INFO:tensorflow:loss = 0.47977936, step = 1900 (2.868 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.7852\n",
+      "INFO:tensorflow:loss = 0.39110917, step = 2000 (2.795 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.543\n",
+      "INFO:tensorflow:loss = 0.28626102, step = 2100 (2.736 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.8827\n",
+      "INFO:tensorflow:loss = 0.8210058, step = 2200 (2.789 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.8972\n",
+      "INFO:tensorflow:loss = 0.30324885, step = 2300 (2.864 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.4844\n",
+      "INFO:tensorflow:loss = 0.37177745, step = 2400 (2.741 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.919\n",
+      "INFO:tensorflow:loss = 1.0876595, step = 2500 (2.784 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.6257\n",
+      "INFO:tensorflow:loss = 1.2506685, step = 2600 (2.888 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9154\n",
+      "INFO:tensorflow:loss = 0.4404544, step = 2700 (2.786 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.1257\n",
+      "INFO:tensorflow:loss = 0.5883649, step = 2800 (2.797 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.8793\n",
+      "INFO:tensorflow:loss = 0.32334977, step = 2900 (2.836 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9264\n",
+      "INFO:tensorflow:loss = 0.4838956, step = 3000 (2.784 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.524\n",
+      "INFO:tensorflow:loss = 0.5866715, step = 3100 (2.815 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.8337\n",
+      "INFO:tensorflow:loss = 2.676759, step = 3200 (2.791 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.736\n",
+      "INFO:tensorflow:loss = 1.2545645, step = 3300 (2.799 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4762\n",
+      "INFO:tensorflow:loss = 0.42674398, step = 3400 (2.818 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.6469\n",
+      "INFO:tensorflow:loss = 1.1909487, step = 3500 (2.805 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9249\n",
+      "INFO:tensorflow:loss = 0.24290858, step = 3600 (2.784 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.5334\n",
+      "INFO:tensorflow:loss = 2.0128684, step = 3700 (2.814 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.9065\n",
+      "INFO:tensorflow:loss = 0.37291014, step = 3800 (2.786 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4597\n",
+      "INFO:tensorflow:loss = 0.2845353, step = 3900 (2.819 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.8651\n",
+      "INFO:tensorflow:loss = 0.25380403, step = 4000 (2.868 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4834\n",
+      "INFO:tensorflow:loss = 0.4595155, step = 4100 (2.818 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.1855\n",
+      "INFO:tensorflow:loss = 0.15868232, step = 4200 (2.763 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.6934\n",
+      "INFO:tensorflow:loss = 0.3485257, step = 4300 (2.802 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.5754\n",
+      "INFO:tensorflow:loss = 0.23376912, step = 4400 (2.810 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.5876\n",
+      "INFO:tensorflow:loss = 0.2259818, step = 4500 (2.810 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.4754\n",
+      "INFO:tensorflow:loss = 0.5815744, step = 4600 (2.819 sec)\n",
+      "INFO:tensorflow:global_step/sec: 35.6073\n",
+      "INFO:tensorflow:loss = 0.5632415, step = 4700 (2.808 sec)\n",
+      "INFO:tensorflow:global_step/sec: 34.9535\n",
+      "INFO:tensorflow:loss = 0.35952073, step = 4800 (2.861 sec)\n",
+      "INFO:tensorflow:global_step/sec: 36.4409\n",
+      "INFO:tensorflow:loss = 0.4022997, step = 4900 (2.744 sec)\n",
+      "INFO:tensorflow:Calling checkpoint listeners before saving checkpoint 5000...\n",
+      "INFO:tensorflow:Saving checkpoints for 5000 into /tmp/tmpwhj4hb50/model.ckpt.\n",
+      "INFO:tensorflow:Calling checkpoint listeners after saving checkpoint 5000...\n",
+      "INFO:tensorflow:Loss for final step: 0.37321797.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow_estimator.python.estimator.canned.linear.LinearClassifierV2 at 0x7f0628022f28>"
+       "<tensorflow_estimator.python.estimator.canned.linear.LinearClassifierV2 at 0x7f1d0efd5bd0>"
       ]
      },
      "execution_count": 5,
@@ -576,7 +651,7 @@
    "source": [
     "#@title Create and train the classifier {display-mode: \"form\"}\n",
     "\n",
-    "num_steps = 1000  #@param {type: \"number\"}\n",
+    "num_steps = 5000  #@param {type: \"number\"}\n",
     "\n",
     "# Create a feature spec for the classifier\n",
     "feature_spec = create_feature_spec(df, features_and_labels)\n",
@@ -592,8 +667,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "colab": {},
-    "colab_type": "code",
     "id": "NUQVro76e38Q"
    },
    "outputs": [
@@ -612,7 +685,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00b76a15c68d45cea4cc4085156c0485",
+       "model_id": "7eaf47f7b0f647ac8e4fa3984f284ff9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -634,14 +707,9 @@
     "from witwidget.notebook.visualization import WitWidget\n",
     "\n",
     "# Load up the test dataset\n",
-    "#test_csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test'\n",
-    "#test_df = pd.read_csv(test_csv_path, names=csv_columns, skipinitialspace=True,\n",
-    "#  skiprows=1)\n",
-    "\n",
-    "h = hdfs.get_fs()\n",
-    "with h.open_file(hdfs.project_path() + \"/TourData/census/adult.test\", \"rt\") as testFile:\n",
-    "    test_df = pd.read_csv(testFile, names=csv_columns, skipinitialspace=True, skiprows=1)\n",
-    "\n",
+    "test_csv_path = 'https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.test'\n",
+    "test_df = pd.read_csv(test_csv_path, names=csv_columns, skipinitialspace=True,\n",
+    "  skiprows=1)\n",
     "make_label_column_numeric(test_df, label_column, lambda val: val == '>50K.')\n",
     "test_examples = df_to_examples(test_df[0:num_datapoints])\n",
     "\n",
@@ -650,28 +718,37 @@
     "    classifier, feature_spec).set_label_vocab(['Under 50K', 'Over 50K'])\n",
     "WitWidget(config_builder, height=tool_height_in_px)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "colab": {
    "collapsed_sections": [],
    "name": "What-If Tool Notebook Usage",
-   "provenance": [],
-   "version": "0.3.2"
+   "provenance": []
   },
   "kernelspec": {
-   "display_name": "PySpark",
+   "display_name": "Python",
    "language": "python",
-   "name": "pysparkkernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 3
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python3"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
