--- a/notebooks/ml/pandas/pandas-hdfs.ipynb
+++ b/notebooks/ml/pandas/pandas-hdfs.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "---\n",
@@ -22,9 +22,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32561 entries, 0 to 32560\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   Age             32561 non-null  int64 \n",
+      " 1   Workclass       30725 non-null  object\n",
+      " 2   fnlwgt          32561 non-null  int64 \n",
+      " 3   Education       32561 non-null  object\n",
+      " 4   Education-Num   32561 non-null  int64 \n",
+      " 5   Marital Status  32561 non-null  object\n",
+      " 6   Occupation      30718 non-null  object\n",
+      " 7   Relationship    32561 non-null  object\n",
+      " 8   Race            32561 non-null  object\n",
+      " 9   Sex             32561 non-null  object\n",
+      " 10  Capital Gain    32561 non-null  int64 \n",
+      " 11  Capital Loss    32561 non-null  int64 \n",
+      " 12  Hours per week  32561 non-null  int64 \n",
+      " 13  Country         31978 non-null  object\n",
+      " 14  Target          32561 non-null  object\n",
+      "dtypes: int64(6), object(9)\n",
+      "memory usage: 3.7+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "from hops import hdfs\n",
     "from hops import pandas_helper as pandas\n",
@@ -39,25 +68,29 @@
     "pandas.write_csv(\"Resources/relative-path.csv\", train_data)\n",
     "pandas.write_csv(hdfs.project_path() + \"/Resources/full-path.csv\", train_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
