--- a/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
+++ b/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "4a9f0255",
+   "id": "3b4424b8",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c420913",
+   "id": "915b67a8",
    "metadata": {},
    "source": [
     "# Tags\n",
     "\n",
-    "The feature store enables users to attach tags to artifacts, such as feature groups or to training datasets. Tags are aditional metadata attached to your artifacts and thus they can be used for an enhance full text search. Adding tags to a feature group provides users with a more dynamic metadata content that can be used for both storage as well as enhancing artifact discoverability. \n",
+    "The feature store enables users to attach tags to artifacts, such as feature groups or to training datasets. Tags are aditional metadata attached to your artifacts and thus they can be used for an enhance full text search. Adding tags to a artifact provides users with a more dynamic metadata content that can be used for both storage as well as enhancing artifact discoverability. \n",
     "\n",
     "<b>Note</b>: By default Hopsworks makes all metadata searchable, users can opt out for particular featurestores if they want to keep them private.\n",
     "\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b6a070",
+   "id": "a534b0ca",
    "metadata": {},
    "source": [
     "## Notebook tour \n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "db58108d",
+   "id": "43f9fb81",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "090d6ffa",
+   "id": "d928a78e",
    "metadata": {},
    "source": [
     "### Creating a feature group and a training dataset\n",
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "645ccb72",
+   "id": "108f6989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a28d534d",
+   "id": "3539f7ae",
    "metadata": {},
    "source": [
     "Create the feature group used in this notebook to attach tags to."
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "549bfd58",
+   "id": "e3cb31f5",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "541269f4",
+   "id": "11aa37e8",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3074e5c",
+   "id": "d89465f9",
    "metadata": {},
    "source": [
     "Create the training dataset used in this notebook to attach tags to."
@@ -268,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e1956e55",
+   "id": "3d0c626e",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "97d269d4",
+   "id": "6809409b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0764c1a6",
+   "id": "3e417314",
    "metadata": {},
    "source": [
     "### Working with tags on featuregroups"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba89ee4",
+   "id": "32d2a9f3",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaf94c7d",
+   "id": "95dd248c",
    "metadata": {},
    "source": [
     "Attaching a simple key-value(string) tag to your featuregroup.\n",
@@ -325,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "0d034644",
+   "id": "8b64d316",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "9d1531a4",
+   "id": "915ad6d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "453534ff",
+   "id": "f4a563ba",
    "metadata": {},
    "source": [
     "#### Listing tags\n",
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "fe1987b0",
+   "id": "bb5b972c",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44556d98",
+   "id": "f5d0186d",
    "metadata": {},
    "source": [
     "Reading all the tags attached to a feature group."
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "516ee858",
+   "id": "52bd79df",
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b66a8a26",
+   "id": "0bad5a46",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8d3e1a07",
+   "id": "070012c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd604fe",
+   "id": "09b4ccfb",
    "metadata": {},
    "source": [
     "Tag is no longer in the list of attached tags, but can be re-attached at a later time."
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "264a67cc",
+   "id": "3a180e61",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "675c582e",
+   "id": "4eec466e",
    "metadata": {},
    "source": [
     "#### Using tags with more complex values\n",
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "4c0e4a97",
+   "id": "b2193dbf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e35ae36d",
+   "id": "841785c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "66ba3247",
+   "id": "04191a4d",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e6b3e7",
+   "id": "db2d9c4e",
    "metadata": {},
    "source": [
     "### Working with tags on training datasets\n",
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c700d2a9",
+   "id": "687f70e4",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "00c2ec24",
+   "id": "a8a73717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ec93aca",
+   "id": "59434da9",
    "metadata": {},
    "source": [
     "#### Listing tags"
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d2bb6893",
+   "id": "c1bdebaa",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9950b84f",
+   "id": "892b6df1",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d40fd42",
+   "id": "a854059b",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "91954f2a",
+   "id": "effd224b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "028e6a2a",
+   "id": "1d71d7bf",
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe6a2966",
+   "id": "260b35ef",
    "metadata": {},
    "source": [
     "### Cleaning up"
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37b896c8",
+   "id": "65cd3ab0",
    "metadata": {},
    "source": [
     "If you want to be able to rerun the notebook with no failed paragraphs you will need to delete the feature group <b>tag_fg</b> and the training dataset <b>tag_td</b>."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a3a2fee1",
+   "id": "e28640b7",
    "metadata": {},
    "outputs": [
     {
