--- a/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
+++ b/notebooks/featurestore/hsfs/tags/feature_store_tags.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "raw",
-   "id": "1b8b7b71",
+   "id": "610f640d",
    "metadata": {},
    "source": [
     "---\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c4d8131",
+   "id": "4f3be8a5",
    "metadata": {},
    "source": [
     "# Tags\n",
@@ -163,13 +163,14 @@
     "\n",
     "### References\n",
     "For more references on the schemas check:\n",
-    "* Our documentation on https://docs.hopsworks.ai/feature-store-api/latest/generated/tags\n",
-    "* The reference https://json-schema.org in order to figure out the full capabilities of json schemas"
+    "\n",
+    "- Our documentation on https://docs.hopsworks.ai/feature-store-api/latest/generated/tags\n",
+    "- The reference https://json-schema.org in order to figure out the full capabilities of json schemas"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8a3d7ace",
+   "id": "8880144f",
    "metadata": {},
    "source": [
     "## Notebook tour \n",
@@ -180,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8207b9f8",
+   "id": "a8e43bf1",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de39fdd7",
+   "id": "2767a0c4",
    "metadata": {},
    "source": [
     "### Creating a feature group and a training dataset\n",
@@ -209,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2eb4f908",
+   "id": "bd57e805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad7efe68",
+   "id": "1692ffd6",
    "metadata": {},
    "source": [
     "Create the feature group used in this notebook to attach tags to."
@@ -228,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "3d97fc61",
+   "id": "839a5da1",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "441e759e",
+   "id": "2b68463f",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f81ea7c",
+   "id": "abf0f227",
    "metadata": {},
    "source": [
     "Create the training dataset used in this notebook to attach tags to."
@@ -276,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "9d95a5b4",
+   "id": "a399e9e0",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7eb37be5",
+   "id": "873423b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aba3b8f",
+   "id": "cc50880a",
    "metadata": {},
    "source": [
     "### Working with tags on featuregroups"
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19cd413e",
+   "id": "12c2daae",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e71b918",
+   "id": "89663713",
    "metadata": {},
    "source": [
     "Attaching a simple key-value(string) tag to your featuregroup.\n",
@@ -333,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "94143fdb",
+   "id": "eb2fe82b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "8cf5824f",
+   "id": "74ae8794",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316ceff5",
+   "id": "78ef577f",
    "metadata": {},
    "source": [
     "#### Listing tags\n",
@@ -363,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8f98c55b",
+   "id": "ce96d36a",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c78d1b95",
+   "id": "33f264bf",
    "metadata": {},
    "source": [
     "Reading all the tags attached to a feature group."
@@ -389,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e3c624ff",
+   "id": "f7f64e40",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30ad312b",
+   "id": "706bb4dd",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -415,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d13ca663",
+   "id": "93d97fdf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b87b1fb4",
+   "id": "05471156",
    "metadata": {},
    "source": [
     "Tag is no longer in the list of attached tags, but can be re-attached at a later time."
@@ -433,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "4e6ca626",
+   "id": "a1ea16cb",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78292279",
+   "id": "70c0c69c",
    "metadata": {},
    "source": [
     "#### Using tags with more complex values\n",
@@ -460,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e5eabbf9",
+   "id": "54952d3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "dc48408d",
+   "id": "56ea70dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +493,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "e5c3d2a4",
+   "id": "b73e1eaa",
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12dde7ef",
+   "id": "9a01b0af",
    "metadata": {},
    "source": [
     "### Working with tags on training datasets\n",
@@ -518,7 +519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1baf43",
+   "id": "ad016fb1",
    "metadata": {},
    "source": [
     "#### Attaching tags"
@@ -527,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e69dd5ae",
+   "id": "8b013dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9df15f9e",
+   "id": "50d88a00",
    "metadata": {},
    "source": [
     "#### Listing tags"
@@ -545,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "a334f584",
+   "id": "691e0f0f",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "128ad25b",
+   "id": "07a60435",
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81a67fb7",
+   "id": "a2d14fd4",
    "metadata": {},
    "source": [
     "#### Deleting tags"
@@ -589,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a6707d71",
+   "id": "cfb77019",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "be38215e",
+   "id": "7ec12afd",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b9b9e8b",
+   "id": "d23ddd0e",
    "metadata": {},
    "source": [
     "### Cleaning up"
@@ -624,7 +625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09cf895f",
+   "id": "ed98010b",
    "metadata": {},
    "source": [
     "If you want to be able to rerun the notebook with no failed paragraphs you will need to delete the feature group <b>tag_fg</b> and the training dataset <b>tag_td</b>."
@@ -633,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "74ca8b6f",
+   "id": "59b6c0be",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1cc5a63d",
+   "id": "26d59f0b",
    "metadata": {},
    "outputs": [],
    "source": []
