add comments and remove empty cells

--- a/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/1_create_feature_groups.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "779c09c6",
+   "id": "7eed4145",
    "metadata": {},
    "outputs": [
     {
@@ -17,7 +17,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>60</td><td>application_1618238932364_0065</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-head.hw.se:8089/proxy/application_1618238932364_0065/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://ofs-w1.internal.cloudapp.net:8044/node/containerlogs/container_1618238932364_0065_01_000001/card_fraud_demo__davit000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>2</td><td>application_1618520805810_0002</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://resourcemanager.service.consul:8089/proxy/application_1618520805810_0002/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e01_1618520805810_0002_01_000001/card_fraud__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -30,36 +30,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SparkSession available as 'spark'.\n",
-      "Connected. Call `.close()` to terminate connection gracefully."
+      "SparkSession available as 'spark'.\n"
      ]
     }
    ],
    "source": [
-    "import hsfs\n",
     "import json\n",
-    "from hops import kafka, tls\n",
-    "from hsfs import engine\n",
-    "\n",
-    "from pyspark.sql.functions import from_json, window, avg,count, stddev, explode, date_format,col\n",
-    "from pyspark.sql.types import StructField, StructType, StringType, DoubleType, TimestampType, LongType, IntegerType\n",
-    "\n",
-    "connection = hsfs.connection()\n",
-    "fs = connection.get_feature_store()"
+    "from pyspark.sql.types import StructField, StructType, StringType, DoubleType, TimestampType, LongType, IntegerType"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be9570d1",
+   "id": "21ab1ff0",
    "metadata": {},
    "source": [
-    "## Create empty feature groups\n"
+    "# Create empty feature groups \n",
+    "We expecting to recieve data from Kafka topic, read using spark streaming, do streamig aggregations and ingest to feature groups. Thus we will create empy feature groups where we will ingest streaming data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9269dcfd",
+   "metadata": {},
+   "source": [
+    "### Define schema for feature groups"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "133aad95",
+   "id": "a0ef3ba7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,28 +81,86 @@
     "schema_12h = StructType([StructField('cc_num', LongType(), True),\n",
     "                         StructField('num_trans_per_12h', LongType(), True),\n",
     "                         StructField('avg_amt_per_12h', DoubleType(), True),\n",
-    "                         StructField('stdev_amt_per_12h', DoubleType(), True)])\n"
+    "                         StructField('stdev_amt_per_12h', DoubleType(), True)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b1f87cd",
+   "metadata": {},
+   "source": [
+    "### Create empty spark dataframes "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "178b1140",
+   "id": "20c1e7ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "empty_card_df = sqlContext.createDataFrame(sc.emptyRDD(), card_schema)\n",
+    "empty_10m_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_10m)\n",
+    "empty_1h_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_1h)\n",
+    "empty_12h_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_12h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e7d5717",
+   "metadata": {},
+   "source": [
+    "### Establish a connection with your Hopsworks feature store."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5fe10bca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7efc6ecb0390>"
+      "Connected. Call `.close()` to terminate connection gracefully."
      ]
     }
    ],
    "source": [
-    "empty_card_df = sqlContext.createDataFrame(sc.emptyRDD(), card_schema)\n",
+    "import hsfs\n",
+    "connection = hsfs.connection()\n",
+    "# get a reference to the feature store, you can access also shared feature stores by providing the feature store name\n",
+    "fs = connection.get_feature_store()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c6b2675",
+   "metadata": {},
+   "source": [
+    "### Create feature groups. metadata object and save empty spark dataframes to materialise in hopsworks feature store.\n",
     "\n",
+    "Now We will create each feature group and enable online feature store. Since we are plannig to use these feature groups durring online model serving primary key(s) are required to retrieve model serving feature vector from online feature store. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "680d1145",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da964d10>"
+     ]
+    }
+   ],
+   "source": [
     "card_transactions = fs.create_feature_group(\"card_transactions\", \n",
-    "                                              version = 6,\n",
+    "                                              version = 1,\n",
     "                                              online_enabled=True, \n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"tid\"])\n",
@@ -112,75 +170,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1ce4c83b",
+   "execution_count": 10,
+   "id": "b4695c3a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7efc6ecb0250>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da9d9910>"
      ]
     }
    ],
    "source": [
-    "empty_10m_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_10m)\n",
-    "\n",
     "card_transactions_10m_agg = fs.create_feature_group(\"card_transactions_10m_agg\", \n",
-    "                                              version = 6,\n",
+    "                                              version = 1,\n",
     "                                              online_enabled=True, \n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"])\n",
     "\n",
-    "card_transactions_10m_agg.save(empty_10m_agg_df)\n"
+    "card_transactions_10m_agg.save(empty_10m_agg_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4d8579ac",
+   "execution_count": 11,
+   "id": "3a077f99",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7efc6ec8b390>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa7c1d1bd90>"
      ]
     }
    ],
    "source": [
-    "empty_1h_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_1h)\n",
-    "\n",
     "card_transactions_1h_agg = fs.create_feature_group(\"card_transactions_1h_agg\", \n",
-    "                                              version = 6,\n",
+    "                                              version = 1,\n",
     "                                              online_enabled=True, \n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"])\n",
     "\n",
-    "card_transactions_1h_agg.save(empty_1h_agg_df)\n"
+    "card_transactions_1h_agg.save(empty_1h_agg_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1e26971f",
+   "execution_count": 12,
+   "id": "434547a1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<hsfs.feature_group.FeatureGroup object at 0x7efc6ec83b50>"
+      "<hsfs.feature_group.FeatureGroup object at 0x7fa7da9d9c90>"
      ]
     }
    ],
    "source": [
-    "empty_12h_agg_df = sqlContext.createDataFrame(sc.emptyRDD(), schema_12h)\n",
-    "\n",
     "card_transactions_12h_agg = fs.create_feature_group(\"card_transactions_12h_agg\", \n",
-    "                                              version = 6,\n",
+    "                                              version = 1,\n",
     "                                              online_enabled=True, \n",
     "                                              statistics_config=False, \n",
     "                                              primary_key=[\"cc_num\"])\n",
@@ -191,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bae5dd99",
+   "id": "c9422363",
    "metadata": {},
    "outputs": [],
    "source": []
