--- a/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/2_produce_transactions.ipynb
@@ -23,7 +23,7 @@
     }
    },
    "source": [
-    "## This example is based on [amazon-sagemaker-feature-store-streaming-aggregation](https://github.com/aws-samples/amazon-sagemaker-feature-store-streaming-aggregation)"
+    "### Inspiration of this example was taken from [here](https://github.com/aws-samples/amazon-sagemaker-feature-store-streaming-aggregation)."
    ]
   },
   {
@@ -95,30 +95,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# change this according to your settings\n",
-    "KAFKA_BROKER_ADDRES = \"172.22.0.19:9091\"\n",
-    "KAFKA_TOPIC_NAME = \"credit_card_transactions_2\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "#### Seed for Reproducibility"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "button": false,
@@ -129,6 +105,7 @@
    },
    "outputs": [],
    "source": [
+    "# Seed for Reproducibility\n",
     "faker = Faker()\n",
     "faker.seed_locale('en_US', 0)"
    ]
@@ -176,11 +153,15 @@
    },
    "outputs": [],
    "source": [
-    "TOTAL_UNIQUE_TRANSACTIONS = 5400 # 5.4 Million\n",
+    "TOTAL_UNIQUE_TRANSACTIONS = 5400 \n",
     "TOTAL_UNIQUE_USERS = 100\n",
     "START_DATE = '2021-04-01 00:00:00'\n",
     "END_DATE = '2021-04-04 00:01:00'\n",
-    "DATE_FORMAT = '%Y-%m-%d %H:%M:%S'"
+    "DATE_FORMAT = '%Y-%m-%d %H:%M:%S'\n",
+    "\n",
+    "# change this according to your settings\n",
+    "KAFKA_BROKER_ADDRES = \"broker.kafka.service.consul:9091\"\n",
+    "KAFKA_TOPIC_NAME = \"credit_card_transactions\""
    ]
   },
   {
@@ -933,6 +914,13 @@
    "source": [
     "pandas.write_csv(hdfs.project_path() + \"/Resources/transaction_labels.csv\", labelsDF, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
