--- a/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
+++ b/notebooks/featurestore/hsfs/online_featurestore/4_create_training_dataset.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "84206b18",
+   "id": "2558dbb4",
    "metadata": {},
    "source": [
-    "## Connect to the Feature Store"
+    "### Establish a connection with your Hopsworks feature store."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e04d40bb",
+   "id": "f5f6b7c5",
    "metadata": {},
    "outputs": [
     {
@@ -45,14 +45,14 @@
    ],
    "source": [
     "import hsfs\n",
-    "\n",
     "connection = hsfs.connection()\n",
+    "# get a reference to the feature store, you can access also shared feature stores by providing the feature store name\n",
     "fs = connection.get_feature_store()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0d08ae5f",
+   "id": "5ebc9160",
    "metadata": {},
    "source": [
     "## Get feature groups"
@@ -61,18 +61,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ec103cd7",
+   "id": "afca6163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "card_transactions_10m_agg = fs.get_feature_group(\"card_transactions_10m_agg\", version = 6)\n",
-    "card_transactions_1h_agg = fs.get_feature_group(\"card_transactions_1h_agg\", version = 6)\n",
-    "card_transactions_12h_agg = fs.get_feature_group(\"card_transactions_12h_agg\", version = 6)"
+    "card_transactions_10m_agg = fs.get_feature_group(\"card_transactions_10m_agg\", version = 1)\n",
+    "card_transactions_1h_agg = fs.get_feature_group(\"card_transactions_1h_agg\", version = 1)\n",
+    "card_transactions_12h_agg = fs.get_feature_group(\"card_transactions_12h_agg\", version = 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d732038b",
+   "id": "2cf06eb6",
    "metadata": {},
    "source": [
     "## Create training dataset"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "313b4d69",
+   "id": "5ec4800c",
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17a8850a",
+   "id": "2f87c5e6",
    "metadata": {},
    "outputs": [],
    "source": []
