Fix get_storage_connector basics

--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td_bucket_connector = fs.get_storage_connector(\"td_bucket_connector\", \"S3\")\n",
+    "td_bucket_connector = fs.get_storage_connector(\"td_bucket_connector\")\n",
     "\n",
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
