Fix get_storage_connector basics and links (#210)

--- a/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
+++ b/notebooks/featurestore/hsfs/basics/training_datasets.ipynb
@@ -199,7 +199,7 @@
    "source": [
     "#### Save the dataset on an external storage system\n",
     "\n",
-    "If you are training your model on an external machine learning platform (e.g. SageMaker), you might want to save the training dataset on an external storage system (e.g. S3). You can take advantage of the Hopsworks storage connectors (see [documentation](https://hopsworks.readthedocs.io/en/latest/featurestore/guides/featurestore.html#configuring-storage-connectors-for-the-feature-store)).\n",
+    "If you are training your model on an external machine learning platform (e.g. SageMaker), you might want to save the training dataset on an external storage system (e.g. S3). You can take advantage of the Hopsworks storage connectors (see [documentation](https://docs.hopsworks.ai/latest/integrations/storage-connectors/)).\n",
     "\n",
     "Assuming you have created an S3 storage connector name `td_bucket_connector`, you can create an external training dataset as follows:"
    ]
@@ -210,7 +210,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "td_bucket_connector = fs.get_storage_connector(\"td_bucket_connector\", \"S3\")\n",
+    "td_bucket_connector = fs.get_storage_connector(\"td_bucket_connector\")\n",
     "\n",
     "td = fs.create_training_dataset(name=\"sales_model\",\n",
     "                               description=\"Dataset to train the sales model\",\n",
